Fix for TravisCI test