@@ -155,13 +155,10 @@
                         </goals>
                         <configuration>
                             <useSystemClassLoader>false</useSystemClassLoader>
-                            <argLine>${surefireArgLine}</argLine>
+                            <argLine>-Xms1024m -Xmx2048m ${surefireArgLine}</argLine>
                         </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <argLine>-XX:MaxPermSize=512m</argLine>
-                </configuration>
             </plugin>
         </plugins>
     </build>
